--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,3 +1,23 @@
 <div>
-    <h1>Todo listo</h1>
+    <h1>Registro de productos</h1>
+
+    <form action="/api/products" method="post" enctype="multipart/form-data">
+        <label for="title">Nombre</label>
+        <input type="text" id="title" name="title">
+        <label for="description">Descripcion</label>
+        <input type="text" id="description" name="description">
+        <label for="code">Codigo</label>
+        <input type="text" id="code" name="code">
+        <label for="price">Precio</label>
+        <input type="number" id="price" name="price">
+        <label for="stock">stock</label>
+        <input type="number" id="stock" name="stock">
+        <label for="category">Categoria</label>
+        <input type="text" id="category" name="category">
+
+        <label for="file">Nombre</label>
+        <input type="file" id="file" name="file">
+
+        <button type="submit">Guardar</button>
+    </form>
 </div>
