--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../public/stylesheet.css">
     <title>{{title}}</title>
 </head>
+
 <body>
     <header>
-        
+
     </header>
 
     {{{body}}}
 
     <footer>
-
+        <p>&copy; 2024 Matias Fazzito</p>
     </footer>
 </body>
+
 </html>
