--- a/src/views/productregistration.handlebars
+++ b/src/views/productregistration.handlebars
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylesheet.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Registro de productos</h1>
-
+<div>
+    <h1>{{user.name}} bienvenido al registro de productos</h1>
+    {{#if isAdmin}}
     <form action="/api/products" method="post" enctype="multipart/form-data">
         <label for="title">Nombre</label>
         <input type="text" id="title" name="title">
+        <br>
         <label for="description">Descripcion</label>
         <input type="text" id="description" name="description">
+        <br>
         <label for="code">Codigo</label>
         <input type="text" id="code" name="code">
+        <br>
         <label for="price">Precio</label>
         <input type="number" id="price" name="price">
+        <br>
         <label for="stock">stock</label>
         <input type="number" id="stock" name="stock">
+        <br>
         <label for="category">Categoria</label>
         <input type="text" id="category" name="category">
-
+        <br>
         <label for="file">Nombre</label>
         <input type="file" id="file" name="file">
-
+        <br>
         <button type="submit">Guardar</button>
     </form>
-</body>
-</html>
+    {{else}}
+    <p>No tienes permiso para ver el listado de productos</p>
+    {{/if}}
+</div>
