configuracion inicial de socket.io

--- a/src/views/indexproducts.handlebars
+++ b/src/views/indexproducts.handlebars
@@ -11,3 +11,5 @@
     <p>No tienes permiso para ver el listado de productos</p>
     {{/if}}
 </div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/index.js"></script>
