--- a/src/views/addusers.handlebars
+++ b/src/views/addusers.handlebars
@@ -1,14 +1,14 @@
 <h1>Bienvenido! Por favor identificate</h1>
 
 <form action="/users" method="post">
-    <label for="name">Nombre</label>
-    <input type="text" id="name" name="name">
+    <label for="firstName">Nombre</label>
+    <input type="text" id="firstName" name="firstName">
     <br>
-    <label for="email">Email</label>
+    <label for="lastName">Apellido</label>
+    <input type="text" id="lastName" name="lastName">
+    <br>
+    <label for="email">Contraseña</label>
     <input type="email" id="email" name="email">
-    <br>
-    <label for="password">Contraseña</label>
-    <input type="password" id="password" name="password">
     <br>
     <button type="submit">Ingresar</button>
 </form>
