--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,8 +1,9 @@
 <div>
-    <h1>Hola, {{user.name}}</h1>
-    {{#each products}}
-        <div>
-            <p>{{this.title}} {{this.price}}</p>
-        </div>
-    {{/each}}
+    <h1>Bienvenido!</h1>
+    <h2>que funcionalidad desea utilizar?</h2>
+
+    <button><a href="/products">Productos</a></button>
+    <button><a href="/products/addproduct">Agregar productos</a></button>
+    
+    
 </div>
