solucion de error en routeo y agregado de estilo basico

--- a/src/views/addproduct.handlebars
+++ b/src/views/addproduct.handlebars
@@ -1,6 +1,6 @@
 <h1>Insertar nuevo producto</h1>
 
-<form action="/products" method="POST" enctype="application/x-www-form-urlencoded">
+<form action="/product" method="POST" enctype="application/x-www-form-urlencoded">
     <label for="title">Nombre</label>
     <input type="text" id="title" name="title" required>
     <br>
