--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -9,15 +9,11 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
+    {{>header}}
 
     {{{body}}}
 
-    <footer>
-        <p>&copy; 2024 Matias Fazzito</p>
-    </footer>
+    {{>footer}}
 </body>
 
 </html>
