--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,7 +2,7 @@
     <h1>Lista de productos</h1>
     <ul>
         {{#each products}}
-        <li>
+        <li class="tarjetaProducto">
             <h2>{{this.title}}</h2>
             <p>Precio: ${{this.price}}</p>
             <p>Descripcion: {{this.description}}</p>
