igero cambio de sintaxis en el proyecto

--- a/src/views/addusers.handlebars
+++ b/src/views/addusers.handlebars
@@ -1,14 +1,14 @@
 <h1>Bienvenido! Por favor identificate</h1>
 
-<form action="/users" method="post">
-    <label for="firstName">Nombre</label>
-    <input type="text" id="firstName" name="firstName">
+<form action='/users' method='post'>
+    <label for='firstName'>Nombre</label>
+    <input type='text' id='firstName' name='firstName'>
     <br>
-    <label for="lastName">Apellido</label>
-    <input type="text" id="lastName" name="lastName">
+    <label for='lastName'>Apellido</label>
+    <input type='text' id='lastName' name='lastName'>
     <br>
-    <label for="email">Contraseña</label>
-    <input type="email" id="email" name="email">
+    <label for='email'>Contraseña</label>
+    <input type='email' id='email' name='email'>
     <br>
-    <button type="submit">Ingresar</button>
+    <button type='submit'>Ingresar</button>
 </form>
