--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,8 +2,8 @@
     <h1>Bienvenido!</h1>
     <h2>que funcionalidad desea utilizar?</h2>
 
-    <button><a href="/products">Productos</a></button>
-    <button><a href="/products/addproduct">Agregar productos</a></button>
+    <button><a href='/product'>Productos</a></button>
+    <button><a href='/product/addproduct'>Agregar productos</a></button>
     
     
 </div>
