--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,11 +2,11 @@
     <h1>Lista de productos</h1>
     <ul>
         {{#each products}}
-        <li class="tarjetaProducto">
+        <li class='tarjetaProducto'>
             <h2>{{this.title}}</h2>
             <p>Precio: ${{this.price}}</p>
             <p>Descripcion: {{this.description}}</p>
-            <a href="product/{{this._id}}">Ver detalle</a>
+            <a href='product/{{this._id}}'>Ver detalle</a>
         </li>
         {{/each}}
     </ul>
