--- a/src/views/addusers.handlebars
+++ b/src/views/addusers.handlebars
@@ -7,6 +7,9 @@
     <label for='lastName'>Apellido</label>
     <input type='text' id='lastName' name='lastName'>
     <br>
+    <label for='username'>Apellido</label>
+    <input type='text' id='username' name='username'>
+    <br>
     <label for='email'>Contraseña</label>
     <input type='email' id='email' name='email'>
     <br>
