--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,9 +1,13 @@
 <div>
-    <h1>Bienvenido!</h1>
-    <h2>que funcionalidad desea utilizar?</h2>
-
-    <button><a href='/product'>Productos</a></button>
-    <button><a href='/product/addproduct'>Agregar productos</a></button>
-    
-    
+    <h1>Lista de productos</h1>
+    <ul>
+        {{#each products}}
+        <li class='tarjetaProducto'>
+            <h2>{{this.title}}</h2>
+            <p>Precio: ${{this.price}}</p>
+            <p>Descripcion: {{this.description}}</p>
+            <a href='product/{{this._id}}'>Ver detalle</a>
+        </li>
+        {{/each}}
+    </ul>
 </div>
