solucion de error de routing

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -6,7 +6,7 @@
             <h2>{{this.title}}</h2>
             <p>Precio: ${{this.price}}</p>
             <p>Descripcion: {{this.description}}</p>
-            <a href='product/{{this._id}}'>Ver detalle</a>
+            <a href='/product/{{this._id}}'>Ver detalle</a>
         </li>
         {{/each}}
     </ul>
