--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,13 +1,11 @@
 <div>
-    <h1>Lista de productos</h1>
-    <ul>
-        {{#each products}}
-        <li class='tarjetaProducto'>
-            <h2>{{this.title}}</h2>
-            <p>Precio: ${{this.price}}</p>
-            <p>Descripcion: {{this.description}}</p>
-            <a href='product/{{this._id}}'>Ver detalle</a>
-        </li>
-        {{/each}}
-    </ul>
+    <h1>Bienvenido a la API de Matias Fazzito</h1>
+
+    <h2>Que funcionalidad desea usar hoy?</h2>
+
+    <button><a href="/product">Ver Productos</a></button>
+    <button><a href="/addproduct">Agregar Productos</a></button>
+    <button><a href="/cart">Ver Carrito</a></button>
+    <button><a href="/addcart">Agregar/Modificar Carrito</a></button>
+    
 </div>
