--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,4 +1,4 @@
-<div class='product-container'></div>
+<div class='detalleProducto'>
     <h2>{{product.title}}</h2>
     <p class='price'>Precio: ${{product.price}}</p>
     <p class='description'>{{product.description}}</p>
