--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,7 +1,8 @@
+{{#if products.isValid}}
 <div>
     <h1>Lista de productos</h1>
     <ul>
-        {{#each products}}
+        {{#each products.docs}}
         <li class='tarjetaProducto'>
             <h2>{{this.title}}</h2>
             <p>Precio: ${{this.price}}</p>
@@ -11,3 +12,18 @@
         {{/each}}
     </ul>
 </div>
+<br>
+<div>
+    {{#if products.hasPrevPage}}
+        <a href={{products.prevLink}}>Anterior</a>
+    {{/if}}
+    &nbsp;
+    {{products.page}}
+    &nbsp;
+    {{#if products.hasNextPage}}
+        <a href={{products.nextLink}}>Siguiente</a>
+    {{/if}}
+</div>
+{{else}}
+<h1>No hay productos para mostrar</h1>
+{{/if}}
