--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -6,6 +6,6 @@
     <button><a href="/product">Ver Productos</a></button>
     <button><a href="/addproduct">Agregar Productos</a></button>
     <button><a href="/cart">Ver Carrito</a></button>
-    <button><a href="/addcart">Agregar/Modificar Carrito</a></button>
+    <button><a href="/">Volver a inicio</a></button>
     
 </div>
