--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -3,8 +3,22 @@
     <p class='price'>Precio: ${{product.price}}</p>
     <p class='description'>{{product.description}}</p>
     <p class='id'>ID: {{product._id}}</p>
+
+    <form action='/product/{{product._id}}/addtocart' method="POST" enctype="application/x-www-form-urlencoded">
+        <select id="cartId" name="cartId">
+            <option>Selecciona un carrito</option>
+            {{#each availableCarts}}
+            <option  value="{{this._id}}">{{this._id}}</option>
+            {{/each}}
+        </select>
+        <input type="hidden" name="quantity" value="1">
+        <button type="submit">Agregar al carrito</button>
+    </form>
+    <br>
     <form action='/product/{{product._id}}?_method=DELETE' method='POST' enctype='application/x-www-form-urlencoded'>
         <input type='hidden' name='_method' value='DELETE'>
-        <button type='submit'>Eliminar</button>
+        <button type='submit'>Eliminar producto</button>
     </form>
 </div>
+
+<script src="/js/script.js"></script>
