--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,11 +1,13 @@
-<div>
+<header>
     <h1>Bienvenido a la API de Matias Fazzito</h1>
 
-    <h2>Que funcionalidad desea usar hoy?</h2>
+    <h2>Que funcionalidad desea usar?</h2>
 
-    <button><a href="/product">Ver Productos</a></button>
-    <button><a href="/addproduct">Agregar Productos</a></button>
-    <button><a href="/cart">Ver Carrito</a></button>
-    <button><a href="/">Volver a inicio</a></button>
-    
-</div>
+    <nav>
+        <button><a href="/product">Ver Productos</a></button>
+        <button><a href="/addproduct">Agregar Productos</a></button>
+        <button><a href="/cart">Ver Carritos</a></button>
+        <button><a href="/">Volver a inicio</a></button>
+    </nav>
+
+</header>
