--- a/src/public/css/stylesheet.css
+++ b/src/public/css/stylesheet.css
@@ -4,7 +4,83 @@
     box-sizing: border-box;
 }
 
-.tarjetaProducto {
+body {
+    line-height: 1.6;
+    background-color: #A7A7A9;
+    font-size: 1.5rem;
+}
+
+body header {
+    border-bottom: 2px solid black;
+    padding: 1%;
+    background-color: #453F3C;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+}
+
+body header nav {
+    width: 80%;
+    padding: 1%;
+    align-self: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+body header nav button {
+    padding: 1%;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: #C1EDCC;
+}
+
+body header nav button a {
+    text-decoration: none;
+    color: #000000;
+}
+
+body .main {
+    padding: 1%;
+}
+
+body .main .addCart {
+    font-size: 3rem;
+}
+
+body .main label {
+    font-weight: bold;
+}
+
+body .main input {
+    padding: 0.5%;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+body .main button {
+    padding: 0.5%;
+    background-color: #C1EDCC;
+    font-weight: bold;
+}
+
+body .productList {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
+}
+
+body .productList .productContainer {
+    margin: 1%;
+    padding: 1%;
+}
+
+body .productList .productContainer h1 {
+    font-size: 2.5rem;
+    text-decoration: underline;
+}
+
+body .productList .productContainer .productCard {
     margin: 1%;
     padding: 1%;
     display: flex;
@@ -14,31 +90,187 @@
     width: 90%;
     border: 2px solid black;
     font-size: 1rem;
-    background-color: #f5deb3;
+    background-color: #B0C0BC;
 }
 
-.detalleProducto{
+body .productList .productContainer .productCard button {
+    padding: 0.5%;
+    background-color: #C1EDCC;
+}
+
+body .productList .productContainer .productCard button a {
+    text-decoration: none;
+    color: #000000;
+}
+
+body .productList .productPagination {
+    align-self: center;
+    width: 30%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+body .productDetail {
     margin: 1%;
     padding: 1%;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
+    width: 90%;
+    border: 2px solid black;
+    font-size: 1rem;
+    background-color: #B0C0BC;
+}
+
+body .productDetail button {
+    padding: 0.5%;
+    background-color: #C1EDCC;
+}
+
+body .productDetail button a {
+    text-decoration: none;
+    color: #000000;
+}
+
+body .addProduct {
+    padding: 1%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+body .addProduct h1 {
+    font-size: 2rem;
+}
+
+body .addProduct form {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #000000;
+    width: 40%;
+    padding: 2%;
+}
+
+body .addProduct form input {
+    height: 1.5rem;
+    width: 80%;
+    margin: 1%;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+body .addProduct form button {
+    width: 30%;
+    height: 1.5rem;
+    background-color: #C1EDCC;
+}
+
+body .cartList {
+    display: flex;
+    flex-direction: column;
+}
+
+body .cartList .cartContainer {
+    margin: 1%;
+    padding: 1%;
+}
+
+body .cartList .cartContainer h1 {
+    font-size: 2.5rem;
+    text-decoration: underline;
+}
+
+body .cartList .cartContainer .cartCard {
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    width: 90%;
+    border: 2px solid black;
+    font-size: 1rem;
+    background-color: #B0C0BC;
+}
+
+body .cartList .cartContainer .cartCard a{
+    color: #000000;
+}
+
+body .cartList .cartContainer .cartPagination {
+    align-self: center;
+    width: 30%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+body .cartDetail {
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     text-align: center;
     width: 90%;
     border: 2px solid black;
     font-size: 1rem;
-    background-color: #f5deb3;
+    background-color: #B0C0BC;
 }
 
-footer {
+body .cartDetail .productList {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+body .cartDetail .productList .productDetail {
+    margin: 1%;
+    font-weight: bold;
+    min-width: fit-content;
+}
+
+body .cartDetail .productList .productDetail a {
+    color: #000000;
+}
+
+body .cartDetail .addProduct {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 50%;
+    border: 1px solid #000000;
+}
+
+body .cartDetail .addProduct button{
+    padding: 0.5%;
+    background-color: #C1EDCC;
+}
+
+body .cartDetail .cleanCart{
+    width: 10%;
+    margin: 1%;
+}
+
+body .cartDetail .cleanCart button{
+    padding: 10%;
+    background-color: #C1EDCC;
+}
+
+body footer {
     position: fixed;
     bottom: 0;
     text-align: center;
     margin: 0;
-    background-color: #3f3c3c;
+    background-color: #453F3C;
     color: #ffffff;
     font-weight: bold;
     font-size: 2rem;
     width: 100%;
-    height: 10%;
+    height: 5%;
 }
