--- a/src/views/addproduct.handlebars
+++ b/src/views/addproduct.handlebars
@@ -1,27 +1,20 @@
-<div>
+<div class="addProduct">
     <h1>Insertar nuevo producto</h1>
 
     <form action='/product' method='POST' enctype='multipart/form-data'>
-        <label for='title'>Nombre</label>
+        <label for='title'>Nombre:</label>
         <input type='text' id='title' name='title' required>
-        <br>
-        <label for='description'>Descripcion</label>
+        <label for='description'>Descripcion:</label>
         <input type='text' id='description' name='description' required>
-        <br>
-        <label for='code'>Codigo</label>
+        <label for='code'>Codigo:</label>
         <input type='text' id='code' name='code' required>
-        <br>
-        <label for='price'>Precio</label>
+        <label for='price'>Precio:</label>
         <input type='number' id='price' name='price' required>
-        <br>
-        <label for='stock'>stock</label>
+        <label for='stock'>Stock:</label>
         <input type='number' id='stock' name='stock' required>
-        <br>
-        <label for='category'>Categoria</label>
+        <label for='category'>Categoria:</label>
         <input type='text' id='category' name='category' required>
-        <br>
         <input type="file" name="file" id="file">
-        <br>
         <button type='submit'>Guardar</button>
     </form>
     
