--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,4 +1,4 @@
-<div class='detalleProducto'>
+<div class='productDetail'>
     <h2>{{product.title}}</h2>
     <p class='price'>Precio: ${{product.price}}</p>
     <p class='description'>{{product.description}}</p>
@@ -21,4 +21,4 @@
     </form>
 </div>
 
-<script src="/js/script.js"></script>
+<script src="/js/cartScript.js"></script>
