--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -1,7 +1,7 @@
-<div>
+<div class="errorContainer">
 
-    <h1>Ups!</h1>
-    <h2>{{error}}</h2>
+    <h1 class="errorTitle">Ups!</h1>
+    <h2 class="errorDescription">{{error}}</h2>
     <button><a href="/">Volver a inicio</a></button>
     
 </div>
