--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,5 +7,7 @@
         <input type='text' id='title' name='title' required>
         <button type='submit'>Guardar</button>
     </form>
+
+    <h2>Recorda anotar el ID de tu carrito para poder agregar productos a el!</h2>
     
 </div>
