--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -4,7 +4,7 @@
     <h2>Que funcionalidad desea usar?</h2>
 
     <nav>
-        <button><a href="/product">Ver Productos</a></button>
+        <button><a href="/product?page=1&sortOrder=asc&category=">Ver Productos</a></button>
         <button><a href="/addproduct">Agregar Productos</a></button>
         <button><a href="/cart">Ver Carritos</a></button>
         <button><a href="/">Volver a inicio</a></button>
