--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -8,6 +8,7 @@
                 <h2>{{this.title}}</h2>
                 <p>Precio: ${{this.price}}</p>
                 <p>Descripcion: {{this.description}}</p>
+                <p>Categoria: {{this.category}}</p>
                 <button><a href='/product/{{this._id}}'>Ver detalle</a></button>
             </li>
             {{/each}}
